--- a/package.json
+++ b/package.json
@@ -10,32 +10,42 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
+    "@supabase/supabase-js": "^2.38.4",
+    "aws-sdk": "^2.1495.0",
     "axios": "^1.6.1",
+    "base-64": "^1.0.0",
     "expo": "^49.0.3",
     "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
+    "expo-document-picker": "^11.7.0",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
+    "expo-secure-store": "^12.5.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "fontawesome": "^5.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.19.9"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "wrangler": "^3.15.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
