--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@supabase/supabase-js": "^2.38.4",
-    "aws-sdk": "^2.1495.0",
+    "aws-sdk": "^2.1497.0",
     "axios": "^1.6.1",
     "base-64": "^1.0.0",
     "expo": "^49.0.3",
@@ -32,6 +32,7 @@
     "react-native": "^0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
